<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantallaPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.PantallaPrincipal">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/bBonnBluetooth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#424949"
        android:gravity="center"
        android:text="@string/button_BLUETOOTH"
        android:textColor="#FDFEFE"
        android:textSize="22sp" />

    <Button
        android:id="@+id/bArranque"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#626567"
        android:gravity="center"
        android:text="@string/button_ARRANCAR"
        android:textColor="#FDFEFE"
        android:textSize="25sp" />


    <Button
        android:id="@+id/bApagar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#7B7D7D"
        android:gravity="center"
        android:text="@string/button_APAGAR"
        android:textColor="#FDFEFE"
        android:textSize="25sp" />

</LinearLayout>