<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Vistas.PresentarLogin">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.80"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ET_USUARIO"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ET_CONTRASE"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.40"
        android:orientation="vertical">

        <Button
            android:id="@+id/bIngresar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton_redondeado"
            android:text="@string/button_ingresar" />

        <Button
            android:id="@+id/bRegistrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/estilo_boton_redondeado"
            android:text="@string/button_registrarme"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/imagecaptura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription"
            android:src="@drawable/capturallave" />
    </LinearLayout>
</LinearLayout>