<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424949"
    android:orientation="vertical"
    tools:context=".Vistas.Registrarme">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:gravity="bottom"
        android:text="@string/ET_USUARIO"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="#626567"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:gravity="bottom"
        android:text="@string/ET_CONTRASE"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorLink="@color/colorPrimary"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etContra1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="#626567"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:gravity="bottom"
        android:text="@string/ET_REP_CONTRA"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etContra2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="#626567"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        android:textColorLink="@color/colorPrimary" />

    <Button
        android:id="@+id/bGurdarUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.80"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:text="@string/button_registrarme"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />
</LinearLayout>